# internship_at_infotecs_academy

./: LICENSE
Client/: CMakeLists.txt  Client.cpp  cei_packet.h  packet_builder.h  tcp_client.h
Server/: CMakeLists.txt  Server.cpp  cin_input_validation.h  tcp_server.h  thread_safe_queue.h
